Write beginning unit tests for student, teacher, and user, include polymorphic associations in corresponding models, and create dropdown selection for user creation in user form.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :password %>
   </div>
   <div class="field">
-    <%= f.label :person_id_id %><br>
-    <%= f.text_field :person_id_id %>
+    <%= f.label :person_id %>
+    <%= f.grouped_collection_select :person_id, [Teacher, Student], :all, :model_name, :to_global_id, lambda {|person| person.first_name + " " + person.last_name},  prompt: "Select Person" %>
   </div>
   <div class="field">
     <%= f.label :person_type %><br>
