--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :birthdate %><br>
-    <%= f.date_select :birthdate %>
+    <%= f.date_select :birthdate, { include_blank: true, start_year: 1920, end_year: Time.now.year } %>
   </div>
   <div class="actions">
     <%= f.submit %>
