--- a/app/views/dashboard/_students.html.erb
+++ b/app/views/dashboard/_students.html.erb
@@ -1,22 +1,29 @@
-<div class="field">
-  Name: <%= @student.first_name + " " + @student.last_name%>
-</div>
-<div class="field">
-  Birthdate: <%= @student.birthdate %>
-</div>
+<header class="header">
+  <h1 class="header__heading" id="page-title">
+    Name: <%= @student.first_name + " " + @student.last_name%> |
+    Birthdate: <%= @student.birthdate %>
+  </h1>
+</header>
 
-<table>
-  <tr>
-    <th>Course Name:</th>
-    <th>Course Roster:</th>
-    <th>Course Grade:</th>
-  </tr>
-
-  <% @courses.each do |c| %>
+<table class="collection-data" aria-labelledby="page-title">
+  <thead>
     <tr>
-      <td><%= c.course_name %></td>
-      <td><%= @student.classmates(c.id).pluck(:first_name, :last_name) %></td>
-      <td><%= @student.course_grade(c.id) %></td>
+      <th class="cell-label" scope="col">Course Name:</th>
+      <th class="cell-label" scope="col">Semester:</th>
+      <th class="cell-label" scope="col">Course Professor:</th>
+      <th class="cell-label" scope="col">Course Roster:</th>
+      <th class="cell-label" scope="col">Course Grade:</th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @courses.each do |c| %>
+    <tr class="table__row" tabindex="0">
+      <td class="cell-data"><%= c.course_name %></td>
+      <td class="cell-data"><%= c.semester + " " + c.year.year.to_s %></td>
+      <td class="cell-data"><%= c.teacher.first_name + " " + c.teacher.last_name %></td>
+      <td class="cell-data"><%= collection_select :student, :id, @student.classmates(c.id), :id, lambda {|person| person.first_name + " " + person.last_name}, readonly: true, include_blank: "Click To View Classmates", selected: :blank %></td>
+      <td class="cell-data"><%= (@student.course_grade(c.id).to_f * 100).to_s + "%" %></td>
     </tr>
   <% end %>
 </table>
