--- a/app/views/dashboard/professors.html.erb
+++ b/app/views/dashboard/professors.html.erb
@@ -11,7 +11,6 @@
       <th class="cell-label" scope="col">Course Name:</th>
       <th class="cell-label" scope="col">Semester:</th>
       <th class="cell-label" scope="col">Course Roster:</th>
-      <th class="cell-label" scope="col">Course Grade:</th>
     </tr>
   </thead>
 
@@ -20,8 +19,7 @@
     <tr class="table__row" tabindex="0">
       <td class="cell-data"><%= c.course_name %></td>
       <td class="cell-data"><%= c.semester + " " + c.year.year.to_s %></td>
-      <td class="cell-data"><%= collection_select :student, :id, @student.classmates(c.id), :id, lambda {|person| person.first_name + " " + person.last_name}, readonly: true, include_blank: "Click To View Classmates", selected: :blank %></td>
-      <td class="cell-data"><%= (@student.course_grade(c.id).to_f * 100).to_s + "%" %></td>
+      <td class="cell-data"><%= collection_select :student, :id, c.roster, :id, lambda {|person| person.first_name + " " + person.last_name}, readonly: true, include_blank: "Click To View Class Roster", selected: :blank %></td>
     </tr>
   <% end %>
 </table>
