Customize devise registration controller to determine user polymorphic association with student or teacher and refactor dashboard controller to match these changes.

--- a/app/views/dashboard/students.html.erb
+++ b/app/views/dashboard/students.html.erb
@@ -1,4 +1,4 @@
-<% if user.person_type == "Student" %>
+<% if current_user.person_type == "Teacher" %>
   <% redirect_to dashboard_teachers_path %>
 <% else %>
   <header class="header">
