--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <%= link_to "Home", root_path, class: "btn btn-primary" %>
+  <% if current_user && current_user.person_type == "Teacher" %>
+    <%= link_to "Students", students_path, class: "btn btn-primary" %>
+    <%= link_to "Teachers", teachers_path, class: "btn btn-primary" %>
+    <%= link_to "Users", users_path, class: "btn btn-primary" %>
+    <%= link_to "Courses", courses_path, class: "btn btn-primary" %>
+    <%= link_to "Assignments", assignments_path, class: "btn btn-primary" %>
+  <% end %>
+  <%= link_to("Login", new_user_session_path, class: "btn btn-primary") unless user_signed_in? %>
+  <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
