--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -30,4 +30,6 @@
 
 <br>
 
-<%= link_to 'New Course', new_course_path %>
+<% if current_user && current_user.person_type == "Teacher" %>
+  <%= link_to 'New Course', new_course_path %>
+<% end %>
