--- a/app/views/dashboard/students.html.erb
+++ b/app/views/dashboard/students.html.erb
@@ -1,5 +1,5 @@
-<% if current_user.person_type == "Teacher" %>
-  <% redirect_to dashboard_teachers_path %>
+<% if current_user && current_user.person_type == "Teacher" %>
+  <% redirect_to dashboard_teachers_url %>
 <% else %>
   <header class="header">
     <h1 class="header__heading" id="page-title">
