--- a/app/views/course_registrations/show.html.erb
+++ b/app/views/course_registrations/show.html.erb
@@ -1,4 +1,24 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Student:</strong>
+  <%= @course_registration.student.first_name + " " + @course_registration.student.last_name %>
+</p>
+
+<p>
+  <strong>Student ID:</strong>
+  <%= @course_registration.student_id %>
+</p>
+
+<p>
+  <strong>Course:</strong>
+  <%= @course_registration.course.course_name %>
+</p>
+
+<p>
+  <strong>Course ID:</strong>
+  <%= @course_registration.course_id %>
+</p>
+
 <%= link_to 'Edit', edit_course_registration_path(@course_registration) %> |
 <%= link_to 'Back', course_registrations_path %>
