--- a/app/views/course_registrations/index.html.erb
+++ b/app/views/course_registrations/index.html.erb
@@ -5,6 +5,10 @@
 <table>
   <thead>
     <tr>
+      <th>Student</th>
+      <th>Student ID</th>
+      <th>Course</th>
+      <th>Course ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +16,10 @@
   <tbody>
     <% @course_registrations.each do |course_registration| %>
       <tr>
+        <td><%= course_registration.student.first_name + " " + course_registration.student.last_name %></td>
+        <td><%= course_registration.student_id %></td>
+        <td><%= course_registration.course.course_name %></td>
+        <td><%= course_registration.course_id %></td>
         <td><%= link_to 'Show', course_registration %></td>
         <td><%= link_to 'Edit', edit_course_registration_path(course_registration) %></td>
         <td><%= link_to 'Destroy', course_registration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
