--- a/app/views/dashboard/teachers.html.erb
+++ b/app/views/dashboard/teachers.html.erb
@@ -1,29 +1,26 @@
-<% if current_user && current_user.person_type == "Student" %>
-  <% redirect_to dashboard_students_url %>
-<% else %>
-  <header class="header">
-    <h1 class="header__heading" id="page-title">
-      Name: <%= @teacher.first_name + " " + @teacher.last_name%> |
-      Birthdate: <%= @teacher.birthdate %>
-    </h1>
-  </header>
+<header class="header">
+  <h1 class="header__heading" id="page-title">
+    Name: <%= @teacher.first_name + " " + @teacher.last_name%> |
+    Birthdate: <%= @teacher.birthdate %>
+  </h1>
+</header>
 
-  <table class="collection-data" aria-labelledby="page-title">
-    <thead>
-      <tr>
-        <th class="cell-label" scope="col">Course Name:</th>
-        <th class="cell-label" scope="col">Semester:</th>
-        <th class="cell-label" scope="col">Course Roster:</th>
-      </tr>
-    </thead>
+<table class="collection-data" aria-labelledby="page-title">
+  <thead>
+    <tr>
+      <th class="cell-label" scope="col">Course Name:</th>
+      <th class="cell-label" scope="col">Semester:</th>
+      <th class="cell-label" scope="col">Course Roster:</th>
+    </tr>
+  </thead>
 
-    <tbody>
-    <% @courses.each do |c| %>
-      <tr class="table__row" tabindex="0">
-        <td class="cell-data"><%= c.course_name %></td>
-        <td class="cell-data"><%= c.semester + " " + c.year.year.to_s %></td>
-        <td class="cell-data"><%= collection_select :student, :id, c.roster, :id, lambda {|person| person.first_name + " " + person.last_name}, readonly: true, include_blank: "Click To View Class Roster", selected: :blank %></td>
-      </tr>
-    <% end %>
-  </table>
-<% end %>
+  <tbody>
+  <% @courses.each do |c| %>
+    <tr class="table__row" tabindex="0">
+      <td class="cell-data"><%= c.course_name %></td>
+      <td class="cell-data"><%= c.semester + " " + c.year.year.to_s %></td>
+      <td class="cell-data"><%= collection_select :student, :id, c.roster, :id, lambda {|person| person.first_name + " " + person.last_name}, readonly: true, include_blank: "Click To View Class Roster", selected: :blank %></td>
+      <td class="cell-data"><%= collection_select :assignment, :id, c.assignments.group(:assignment_name), :id, :assignment_name, readonly: true, include_blank: "Click To View Assignments", selected: :blank %></td>
+    </tr>
+  <% end %>
+</table>
