--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,6 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
       <th>Person</th>
       <th colspan="3"></th>
     </tr>
@@ -16,8 +15,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= user.person %></td>
+        <td><%= user.person.first_name + " " + user.person.last_name %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
