Refactor assignments, courses, and dashboard views as well as add to README.

--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <p>When adding grades and weights, you must use decimals rather than percentages.</p>
   <div class="field">
     <%= f.label :assignment_name %><br>
     <%= f.text_field :assignment_name %>
