--- a/app/views/dashboard/teachers.html.erb
+++ b/app/views/dashboard/teachers.html.erb
@@ -11,6 +11,7 @@
       <th class="cell-label" scope="col">Course Name:</th>
       <th class="cell-label" scope="col">Semester:</th>
       <th class="cell-label" scope="col">Course Roster:</th>
+      <th class="cell-label" scope="col">Course Assignments:</th>
     </tr>
   </thead>
 
