--- a/app/views/dashboard/students.html.erb
+++ b/app/views/dashboard/students.html.erb
@@ -15,7 +15,7 @@
       <th class="cell-label" scope="col">Course Grade:</th>
     </tr>
   </thead>
-
+<!-- I made the course grade a % for students for easier reading and since they don't have permission to create or change grades. -->
   <tbody>
   <% @courses.each do |c| %>
     <tr class="table__row" tabindex="0">
